# ros-bot

./: CMakeLists.txt  LICENSE  README.md  package.xml
HandOfROS_laptop/: CMakeLists.txt  package.xml
HandOfROS_laptop/launch/: start_laptop.launch
HandOfROS_laptop/rviz/: odroid.rviz
HandOfROS_laptop/src/: modeselectornode.cpp
HandOfROS_odroid/: CMakeLists.txt  package.xml
HandOfROS_odroid/launch/: start_odroid.launch
HandOfROS_odroid/src/: motion_node_service.cpp
assignment_2/: CMakeLists.txt  package.xml
assignment_2/launch/: start_assignment_2.launch
assignment_2/src/: initials.cpp
assignment_3/: CMakeLists.txt  package.xml
assignment_3/launch/: start_assignment_3.launch
assignment_3/maps/: maze2.yaml
assignment_3/maps/stage/: blocker.inc  maze2.world  turtlebot.inc
assignment_3/src/: mapper.cpp
assignments/handofros_laptop/: CMakeLists.txt
assignments/handofros_odroid/: CMakeLists.txt
control_node/: CMakeLists.txt  package.xml
control_node/src/: central_control.cpp  state_interrupt.cpp
control_node/srv/: BroadSearch.srv
devel/: .catkin  .rosinstall  setup.sh
gscam/: CMakeLists.txt
gscam/src/: gscam_left.cpp  gscam_right.cpp
hand_of_ros/control_node/: CMakeLists.txt  CMakeLists.txt.orig  package.xml
hand_of_ros/owi_arm/: CMakeLists.txt
hand_of_ros/raspberry_pi_control/: DCTest.py  dm.py  ufour.py  uone.py  uthree.py  utwo.py
hand_of_ros/rob_nav/: CMakeLists.txt  \
hand_of_ros/roomba_control/: package.xml
hand_of_ros/stereo_vision/: CMakeLists.txt  package.xml
handofros_laptop/: CMakeLists.txt  package.xml
handofros_odroid/: package.xml
handofros_odroid/src/: motion_node_service.cpp
irobotcreate2ros/src/: joy_node.cpp
joy_test/: CMakeLists.txt  package.xml
joy_test/launch/: joy.launch  stream.launch
joy_test/scripts/: g_catch.sh  g_catch1.sh  streamer_run.sh
joy_test/src/: create_driver.cpp  create_driver_min.cpp  joynode.cpp  joynode_max.cpp  motion_node_service.cpp  reach_target.cpp
joy_test/srv/: JoyIn.srv
kuchbhi_assignment_4/: CMakeLists.txt  modeselector.h  package.xml
kuchbhi_assignment_5/: CMakeLists.txt  package.xml
matcher/: CMakeLists.txt  package.xml
owi_arm/: README.md  package.xml  setup.py
owi_arm/launch/: ar_robot.launch  ar_robot_multi.launch  markers_to_find.txt  run_camera.launch  run_image_processing.launch  serial_controller.launch
owi_arm/launch/urdf/: twitchy.urdf
owi_arm/scripts/: arm_controller.py  cmd_robot.py
rob_nav/: CMakeLists.txt  package.xml
rob_nav/srv/: Arm.srv
roomba_control/: CMakeLists.txt
stereo_vision/: CMakeLists.txt  frames.gv  package.xml
test_assignment_1/: CMakeLists.txt  package.xml
test_assignment_2/: CMakeLists.txt  package.xml
(+130 files in other folders)
